--- a/src/app/modules/admin/components/add-new-option/add-new-option.component.html
+++ b/src/app/modules/admin/components/add-new-option/add-new-option.component.html
@@ -1,5 +1,5 @@
 <form id="form" [formGroup]="AddnewOptionform">
-  <button mat-raised-button color="" mat-dialog-close id="crossbtn">X</button>
+  <span mat-raised-button color="" mat-dialog-close id="crossbtn">X</span>
   <h1>Add New Option</h1>
   <div class="row" id="main">
     <div class="col-5">
