--- a/src/app/modules/admin/components/add-new-catalog/add-new-catalog.component.html
+++ b/src/app/modules/admin/components/add-new-catalog/add-new-catalog.component.html
@@ -1,5 +1,5 @@
  
- <button mat-raised-button color="" mat-dialog-close  id="crossbtn">X</button>
+ <span mat-raised-button color="" mat-dialog-close  id="crossbtn">X</span>
  <h1 mat-dialog-title>Add New Catalog</h1>
 <div mat-dialog-content class="dialog-content">
     <form [formGroup]="addnewcatalogform">
