--- a/src/app/modules/admin/components/add-new-option/add-new-option.component.scss
+++ b/src/app/modules/admin/components/add-new-option/add-new-option.component.scss
@@ -27,19 +27,22 @@
     margin-left: 20px;
 }
 #crossbtn{
-    margin-left: 810px;
-    margin-top: -60px;
+    margin-left: 890px;
+    margin-top: -50px;
     size: 10px;
     color: red;
     position: absolute;
+    border: solid black 1px;
+    padding: 7px;
   }
   h1{
     margin-left: 320px;
-    margin-top: -50px;
+    margin-top: -70px;
     font-family: initial;
     font-weight: bolder;
    
   }
   .col-5{
     margin-left: 20px;
+    margin-top: 20px;
   }
