--- a/src/app/modules/admin/components/order-history-page/order-history-page.component.html
+++ b/src/app/modules/admin/components/order-history-page/order-history-page.component.html
@@ -1,5 +1,5 @@
-  
-  <button mat-raised-button color="" mat-dialog-close  id="crossbtn">X</button>
+  <form id="form">
+  <span mat-raised-button color="" mat-dialog-close  id="crossbtn">X</span>
   
   <h1>Order Status History</h1>
 <p> Order Id:#{{Orderhistory.orderId}}</p>
@@ -32,3 +32,4 @@
         </tbody>
     </table>
 </div>
+</form>
