--- a/src/app/modules/admin/components/order-item-details/order-item-details.component.scss
+++ b/src/app/modules/admin/components/order-item-details/order-item-details.component.scss
@@ -343,23 +343,7 @@ color: white;
     font-size: 12px;
     width: 10%;
   }
-  /* #h1-responsive{
-    font-size: ;
-  } */
-  
-  /* .accordion .handle label:before {   
-   
-    content: none;
-  }
-  .accordion1 .handle label:before {   
-    content: none;
-  }
-  .accordion2 .handle label:before {   
-    content: none;
-  }
-  .accordion3 .handle label:before {   
-    content: none;
-  } */
+ 
   
 
 }
@@ -1201,7 +1185,7 @@ left:-130px;
   color:red;
   background-color: red;
 } */
-@media screen and (max-width: 600px) {
+@media screen and (min-width:360px) and (max-width:1360px) {
   .Order-status {
     position: relative;
       left:-160px;
@@ -1335,15 +1319,17 @@ color:black;
 }
 
 .card {
-  width: 1400px;
+  width: 940px;
   border: 1px solid #ccc;
   margin: 10px;
   margin-top: 40px;
   padding: 10px;
-  margin-left: 120px;
+  margin-left: 100px;
   height: auto;
 }
-
+h1{
+  margin-left: 680px;
+}
 .card-header {
   font-weight: bold;
   background-color:lightskyblue;
