--- a/src/app/modules/admin/components/product-dialog/product-dialog.component.html
+++ b/src/app/modules/admin/components/product-dialog/product-dialog.component.html
@@ -1,4 +1,4 @@
-<button mat-raised-button color="" mat-dialog-close id="crossbtn">X</button>
+<span mat-raised-button color="" mat-dialog-close id="crossbtn">X</span>
 <h1 mat-dialog-title >Add New Product</h1>
 <div mat-dialog-content class="dialog-content">
   <form [formGroup]="productForm">
