--- a/src/app/modules/admin/components/staff-list/staff-list.component.scss
+++ b/src/app/modules/admin/components/staff-list/staff-list.component.scss
@@ -3,13 +3,13 @@
  *   All rights reserved.
  */
 #table {
-     width:1800px;
-     margin-left: 60px;
-     margin-right: 60px;
+     width:1200px;
+     margin-left: 90px;
+     margin-right: 90px;
      margin-top: 30px;
      font-family: initial;
      overflow-y: auto;
-     height: auto;
+     height: 700px;
     
   }
   
@@ -18,7 +18,7 @@
   }
   
   .demo-button  {
-    margin-left: 1500px;
+    margin-left: 1000px;
     width: 200px;
     margin-top: 90px;
     font-size: 18px;
@@ -40,7 +40,7 @@
     // max-height: 500px;
   }
   h1{
-    margin-left: 840px;
+    margin-left: 610px;
     position: absolute;
     margin-top: -20px;
     color: green;
@@ -48,11 +48,11 @@
     font-size: 31px;
   }
 
-  @media screen and (min-width: 360px) and (max-width: 1400px) {
+  @media screen and (min-width: 360px) and (max-width: 1360px) {
     #table {
-      width:auto;
-      margin-left: 60px;
-      margin-right: 60px;
+      width:1100px;
+      margin-left: 80px;
+      margin-right: 80px;
       margin-top: 30px;
       font-family: initial;
       overflow-y: auto;
@@ -61,7 +61,7 @@
    }
 
    h1{
-    margin-left: 450px;
+    margin-left: 590px;
     position: absolute;
     margin-top: -20px;
     color: green;
@@ -78,7 +78,7 @@
   }
   
   .demo-button  {
-    margin-left: 700px;
+    margin-left: 850px;
     width: 200px;
     margin-top: 90px;
     font-size: 18px;
