--- a/src/app/modules/admin/components/update-product/update-product.component.html
+++ b/src/app/modules/admin/components/update-product/update-product.component.html
@@ -1,7 +1,7 @@
 
 
 <button mat-raised-button color="" mat-dialog-close  id="crossbtn">X</button>
-<h1 mat-dialog-title style="margin-left: 500px;margin-top: 100px; font-family: initial;font-weight: bolder;">Update Product</h1>
+<h1 mat-dialog-title >Update Product</h1>
 <div mat-dialog-content class="dialog-content">
   <form [formGroup]="updateproductform" id="form">
     <div class="container">
