--- a/src/app/modules/admin/components/update-product/update-product.component.scss
+++ b/src/app/modules/admin/components/update-product/update-product.component.scss
@@ -4,8 +4,8 @@
  */
 
 .dialog-content{
-    width: 1200px;
-    height: 500px;
+    width: 1000px;
+    height: 380px;
     font-family: initial;
     overflow-x: hidden;
 
@@ -21,7 +21,7 @@
 }
 #buttons{
     margin-top: 100px;
-    margin-left: 500px;
+    margin-left: 450px;
     position: fixed;
     font-family: initial;
 }
@@ -47,16 +47,24 @@
     margin-top: 10px;
 }
 #crossbtn{
-    margin-left: 1100px;
+    margin-left: 1020px;
     margin-top: -50px;
     color: red;
+    border: solid black 1px;
     
+  }
+  h1{
+    margin-left: 450px;
+    margin-top: 40px;
+     font-family: initial;
+    font-weight: bolder;
   }
 @media screen and (min-width: 500px) and (max-width: 1350px) {
 
     .dialog-content{
-        width: auto;
-        height: auto;
+        width: 900px;
+        height: 350px;
+        overflow: hidden;
     }
     .col-3{
         margin-left: 30px;
@@ -67,7 +75,7 @@
     }
     #buttons{
         margin-top: 45px;
-        margin-left: 300px;
+        margin-left: 190px;
         // position: fixed;
         position: relative;
     }
@@ -82,8 +90,15 @@
         margin-top: 10px;
     }
     #crossbtn{
-        margin-left: 800px;
-        margin-top: -50px;
+        margin-left: 910px;
+        margin-top: -55px;
+        border: solid black 1px;
+      }
+      h1{
+        margin-left: 400px;
+        margin-top: 40px;
+         font-family: initial;
+        font-weight: bolder;
       }
   }
 
