--- a/src/app/modules/admin/components/update-staff/update-staff.component.scss
+++ b/src/app/modules/admin/components/update-staff/update-staff.component.scss
@@ -3,8 +3,8 @@
  *   All rights reserved.
  */
 .box{
-   width: 1250px;
-   height: 500px;
+   width: 1100px;
+   height: 450px;
    margin-top: 50px;
    overflow-x: hidden;
 
@@ -33,8 +33,8 @@
     font-weight: bolder;
   }
   #crossbtn{
-    margin-left: 1190px;
-    margin-top: -60px;
+    margin-left: 1050px;
+    margin-top: -65px;
     position: absolute;
      color: red;
   }
@@ -60,9 +60,10 @@
   }
  
   .box{
-    width: 1250px;
-    height: auto;
+    width: 1000px;
+    height: 420px;
     margin-top: 50px;
+    overflow-x: hidden;
    
  
  }
@@ -78,7 +79,7 @@
   margin-top: 80px;
 }
 #crossbtn{
-  margin-left: 880px;
+  margin-left: 930px;
   margin-top: -60px;
   position: absolute;
    color: red;
@@ -86,6 +87,12 @@
 .select-role{
 margin-left: 80px;
 position: absolute;
+}
+h1{
+  margin-left: 400px;
+  color:darkslategray;
+  font-family: initial;
+  font-weight: bolder;
 }
 }
   
