--- a/src/app/product-sku/product-sku.component.html
+++ b/src/app/product-sku/product-sku.component.html
@@ -90,9 +90,10 @@
         </div>
 
         <div mat-dialog-action [align]="'center'">
-            <button mat-raised-button color="warn" mat-dialog-close>Cancel</button>
+          
             <button style="margin-left:10px" mat-raised-button color="primary" (click)="onSubmit()"
                 >Submit</button>
+                <button mat-raised-button color="warn" mat-dialog-close style="margin-left: 20px;">Cancel</button>
 
             <div *ngIf="submitted && !AddproductSkuform.valid" class="text-danger">All fields are required.</div>
         </div>
