--- a/src/app/modules/admin/components/home/home.component.scss
+++ b/src/app/modules/admin/components/home/home.component.scss
@@ -1,3 +1,9 @@
+/*
+ *   Copyright (c) 2023 Dmantz Technologies Pvt ltd
+ *   All rights reserved.
+ */
 .spacer {
     text-align: center;
+    background-color:var(--toast-background);
+    color:var(--toast-text);
 }
