--- a/src/app/modules/admin/components/product-view/product-view.component.html
+++ b/src/app/modules/admin/components/product-view/product-view.component.html
@@ -1,4 +1,4 @@
-<div style=" height: 100%;background-color:rgb(251, 241, 241)">
+<div style=" height: 100%;" id="container">
   <div class="container-fluid mt-3">
     <div>
       <a routerLink="../" style="color: black;"><fa-icon [icon]="faArrowLeft" size="2x"
@@ -12,7 +12,7 @@
 
     </div>
     <div class="row">
-      <div class="col-sm-4 p-3" style="background-color:rgb(218, 136, 35);">
+      <div class="col-sm-4 p-3"  id="productbg">
         <div class="form-group">
           <fieldset>
             <h1 id="ProductDetails">Product Details</h1>
