--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,13 @@
+/*
+ *   Copyright (c) 2023 Dmantz Technologies Pvt ltd
+ *   All rights reserved.
+ */
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/scss/bootstrap';
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+:root{--toast-background:#ffffff;
+    --toast-text:#333333;
+}
