--- a/src/app/modules/admin/components/product-view/product-view.component.scss
+++ b/src/app/modules/admin/components/product-view/product-view.component.scss
@@ -83,7 +83,7 @@ h1{
     color:var(--toast-text);
 }
 #productbg{
-    background-color:rgb(218, 136, 35);
+    background-color:#e18f2a;
     // background-color:var(--toast-background);
     // color:var(--toast-text);
 }
