--- a/src/app/product-sku-detail/product-sku-detail.component.scss
+++ b/src/app/product-sku-detail/product-sku-detail.component.scss
@@ -52,22 +52,22 @@
   input[disabled] {
   cursor: not-allowed;
   }
-  .Skuimgs{
-      margin-left: 260px;
-    // margin-top: 30px;
-   }
+  // .Skuimgs{
+  //     margin-left: 260px;
+  //   // margin-top: 30px;
+  //  }
    
    .images{
     display:inline-flex;
-    margin-left: -350px;
+    margin-left: 20px;
     margin-top: 10px;
     
    }
    .img1{
-    margin-left: 240px;
+    margin-left: 150px;
    }
   .crossmark{
-    margin-left: 350px;
+    margin-left: 88px;
     // margin-top: 10px;
     color: aqua;
     position: absolute;
